testsuite/tests/indexed-types/should_fail/T4272.stderr

T4272.hs:15:26: error:
    • Occurs check: cannot construct the infinite type:
        a ~ TermFamily a a
      Expected type: TermFamily a (TermFamily a a)
        Actual type: TermFamily a a
    • In the first argument of ‘terms’, namely
        ‘(undefined :: TermFamily a a)’
      In the second argument of ‘prune’, namely
        ‘(terms (undefined :: TermFamily a a))’
      In the expression: prune t (terms (undefined :: TermFamily a a))
    • Relevant bindings include
        t :: TermFamily a a (bound at T4272.hs:15:6)
        laws :: TermFamily a a -> b (bound at T4272.hs:15:1)
